--- a/server/package.json
+++ b/server/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "habitapp-client",
+  "name": "server",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "start": "node ./server",
     "dev": "nodemon ./server",
-    "dev:debug": "DEBUG=habitapp-client* npm run dev",
+    "dev:debug": "DEBUG=server* npm run dev",
     "lint": "eslint ."
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "connect-mongo": "^4.5.0",
+    "cors": "^2.8.5",
     "debug": "^4.3.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
