--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
     "connect-mongo": "^4.5.0",
     "cors": "^2.8.5",
@@ -22,14 +23,14 @@
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
-    "mocha": "^8.2.1",
-    "nodemon": "^2.0.7",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-promise": "^4.2.1",
+    "mocha": "^8.2.1",
+    "nodemon": "^2.0.7",
     "prettier": "^2.2.1"
   }
 }
