--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "axios": "^0.24.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-calendar": "^3.5.0",
+    "react-datetime-picker": "^3.4.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
