--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "connect-mongo": "^4.5.0",
     "cors": "^2.8.5",
     "debug": "^4.3.2",
